- Fixed prelease R23. - Vehicle didnt load fields. - Fixed grid in vehicles.

--- a/src/Controls/KarveControls/Interactivity/Views/ItemSelectionView.xaml
+++ b/src/Controls/KarveControls/Interactivity/Views/ItemSelectionView.xaml
@@ -35,7 +35,10 @@
                                    karveControls:KarveGridExt.SelectedItems="{Binding Path=SelectedItem, Mode=TwoWay}" 
                                     ItemsSource="{Binding Notification.Items}"
                                      Grid.Row="1"
-                                       
+                                       karveControls:KarveGridExt.GridIdentifier="{Binding Notification.GridIdentifier, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridInitCommand="{Binding Notification.GridRegisterCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParamChangedCommand="{Binding Notification.GridResizeCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParameters="{Binding Notification.GridParam, Mode=OneWay}"
                                                                        AllowDraggingColumns="True"
                                                                        AllowEditing="False"
                                                                        AllowFiltering="True"
